# black-ox

./: 404.html  HISTORY.md  README.md  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
authors/: index.html
changelog/: index.html
contributing/: index.html
docs/: getting-started.md  index.md
getting-started/: index.html
license/: index.html
search/: search_index.json
src/black_ox/: black_ox.py  clone_objs.py  create_objs.py
src/black_ox/config/: config.yml
tests/: test_black_ox.py
usage/: index.html
